Initial inclusion of the stylizer plugin to create user customizable styles from pre-configured base styles.
#708154: Update and Save would leave forms in an older state, causing some forms to lose data (particularly the Panels content form).
#467948 by hefox: Allow the vocabulary context to be used by the vocabulary selector access plugin.

ctools 6.x-1.3 (2010-Feb-01)
==============
Added support for context keyword substitutions on override paths in content panes provided by views_content.
#612850: Fix crash bug with panes referencing deleted/missing views.
#595442: Fix AJAX problems with mod_security enabled.
Introduce a "jump menu" tool which can be used to provide jump menus with a select.
Change plugins to no longer need magic function. Can now use $plugin = array(...) instead.
#652236 by alevine: Preserve pre-existing class when adding ajax functionality to form widgets.
#657474: Allows clean exporting for task handlers set to be the homepage. 
#588246 by brynbellomy: Add "context exists" access plugin.
#618194 by brynbellomy: Add "string length" access plugin.
#618204 by brynbellomy: Add "string comparison" access plugin.
#621444 by hefox: contact pages should only show up if contact module is active.
#649144 by neclimdul: Expand ctools_include() to work for other modules. Move API version to 1.3.1
#646944 by DamienMcKenna: Fix wrong variable name in page_manager_enable_page().
Allow "admin path" to be empty for tasks to support Panels Everywhere.
Introduce 'export callback' to individual fields in export.inc. Add some documentation to export.html -- much of it borrowed from stella!
#686826 by dagmar: Improve AJAX error notifications.
#625696 by dmmckenna: Bulk exporter did not define empty array at beginning in code it creates for you.
#651852 by coreyp_1: Add caching to content subtypes to save some queries. This means developers will need to clear caches when changing content type code.