@@ -5,6 +5,10 @@ API version 1.4:
   Allow themes to provide APIs which includes default pages of all types.
   Intorduce ctools_css_add_css() to allow private file systems to have generated CSS.
   Introduce initial build of stylizer.inc to allow UI configurable styles.
+  Introduce 'cache warming' feature. Use 'ctools-use-ajax-cache' or 
+    'ctools-use-modal-cache'. Doing so will cause content to be fetched
+    via AJAX on page load and kept warm in a cache for instant responses
+    to clicks.
 
 API version 1.3.2:
   Introduce 'export callback' to individual fields in export.inc
